<resources>
    <string name="app_name">B16TravelDomain</string>
    <string name="title_activity_home_page_activitywith_navigation">HomePageActivitywithNavigation
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome!</string>
    <string name="nav_header_subtitle">Having your nice trip!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tx_dep_time">Dep time:</string>
    <string name="tx_arr_time">Arr time:</string>
    <string name="tx_duration">Duration</string>
    <string name="base_fare">Base Fare</string>
    <string name="app_discount">App Discount</string>
    <string name="service_tax">Service Tax</string>
    <string name="total_fare">Total Fare</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="coupon_checkbox">Have a coupon?</string>
    <string name="coupon_hint">Enter your coupon code</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_credit">Credit/debit Card</string>
    <string name="proceed_to_payment">Proceed for Payment</string>
    <string name="save_reservation_infor"><u>Save this reservation for later?</u></string>
    <string name="billing_address">Billing address</string>
    <string name="billing_address_1">Address</string>
    <string name="billing_address_2">Address (Optional)</string>
    <string name="hint_billing_city">City</string>
    <string name="hint_billing_state">State</string>
    <string name="hint_billing_zip">Zip code</string>
    <string name="bt_billing_check_out">Check out</string>

    <string name="facebook_app_id">283213362307730</string>
    <string name="fb_login_protocol_scheme">fb283213362307730</string>


    <string name="order_payment_status">Payment:</string>
    <string name="order_payment_status_tv">Paid</string>
    <string name="order_time">Reservation time:</string>
    <string name="bt_home">HomePage</string>
    <string name="apply">Apply</string>
    <string name="passenger_contact_title">Passenger contact</string>
    <string name="passenger_mail">Enter your email</string>
    <string name="passenger_mobile">Enter you phone number</string>
    <string name="passenger_detail_title">Passenger detail</string>
    <string name="passenger_name">Enter passenger name</string>
    <string name="passenger_age">Age</string>
    <string name="passenger_gender_male">Male</string>
    <string name="passenger_gender_female">Female</string>
    <string name="confirm">Confirm</string>
    <string name="sign_in">Sign in</string>
    <string name="book_bus">Reserve your trip</string>
    <string name="saved_reservation">Your saved reservation</string>
    <string name="title_passenger_infor">Passenger Informations</string>
    <string name="title_payment">Credit Payment</string>
    <string name="title_ticket_confirmation">Ticket Confirmation</string>
    <string name="title_order_confirmed">Order Confirmed</string>
    <string name="start_point">Start point</string>
    <string name="end_point">Destination</string>
    <string name="title_route_search">Search for route</string>

    <string-array name="Tech_list">
        <item>Trello</item>
        <item>Google Suite</item>
        <item>Skype</item>
        <item>Github</item>
        <item>Balsamic Mockups 3</item>
        <item>Draw.io</item>
        <item>GSON Converter v2.4.0</item>
        <item>Cardview v7:28</item>
        <item>Butterknife v8.8.1</item>
        <item>Design Patterns</item>
        <item>Retrofit v2.4.0</item>
        <item>Recyclerview v7:28</item>
        <item>MVP</item>
        <item>MVVM</item>
        <item>ViewHolder</item>
        <item>Vysor</item>
        <item>Postman</item>
        <item>Junit</item>
        <item>Mockito</item>
        <item>Roomdatabase with dao</item>
        <item>Relative table with foreign key</item>
        <item>LiveData observer pattern</item>
        <item>Shared Preference</item>
    </string-array>
</resources>
