<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ticketConfirmation.TicketDetailActivity"
    android:orientation="vertical">

    <include layout="@layout/item_date_card" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_detail"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"/>

    <include layout="@layout/item_fare_card"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coupon_checkbox"
        android:layout_margin="5dp"
        android:padding="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:hint="@string/coupon_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:textColor="@color/colorPrimary"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_method_credit"
        android:layout_margin="5dp"
        android:padding="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/proceed_to_payment"
            android:id="@+id/bt_proceed_for_payment"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_reservation_infor"
            android:layout_margin="5dp"/>

    </LinearLayout>











</LinearLayout>