<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/baseline_account"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/nav_book_route"
            android:title="@string/book_bus" />
        <item
            android:id="@+id/nav_saved_reservation"
            android:title="@string/saved_reservation" />
        <item
            android:id="@+id/nav_cancel"
            android:title="Cancel your orders" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_tech"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tech" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="About" />
        </menu>
    </item>

</menu>
