<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:text="@string/passenger_contact_title"
            android:layout_margin="5dp"
            android:textColor="@color/colorPrimary"/>
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_passenger_mail"
            android:hint="@string/passenger_mail"
            android:layout_margin="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/et_passenger_mobile"
            android:hint="@string/passenger_mobile"
            android:layout_margin="5dp"/>
        
    </LinearLayout>

</android.support.v7.widget.CardView>