<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passenger_detail_title"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_passenger_detail_title"
            android:layout_margin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seat_id"
            app:layout_constraintStart_toEndOf="@id/tv_passenger_detail_title"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="5dp"
            android:text="1"/>

        <EditText
            android:id="@+id/et_passenger_name"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:hint="@string/passenger_name"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_passenger_detail_title" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="3"
            android:hint="@string/passenger_age"
            android:id="@+id/tv_passenger_age"
            app:layout_constraintTop_toBottomOf="@id/tv_passenger_detail_title"
            app:layout_constraintLeft_toRightOf="@id/et_passenger_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLength="3"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_passenger_name"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:id="@+id/rb_passenger_gender"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger_gender_male"
                android:id="@+id/rb_passenger_male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passenger_gender_female"
                android:id="@+id/rb_passenger_female"/>

        </RadioGroup>




    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>