<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    android:layout_margin="5dp"
    tools:ignore="MissingDefaultResource">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_date_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:padding="3sp"
            android:text="25"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/tv_week_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="3sp"
            android:text="Wednesday"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_date_date_card"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_month_date_card"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:padding="3sp"
            android:text="November"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_date_date_card"
            app:layout_constraintTop_toBottomOf="@id/tv_week_date_card"
            app:layout_constraintVertical_bias="0.117" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:padding="3sp"
            android:text="@string/tx_dep_time"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_week_date_card"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_dep_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:padding="3sp"
            android:text="09:00 PM"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:padding="3sp"
            android:text="@string/tx_arr_time"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_month_date_card"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_arr_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:padding="3sp"
            android:text="09:00 PM"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_dep_date_card" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:padding="3sp"
            android:text="@string/tx_duration"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/tv_month_date_card"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_duration_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="3sp"
            android:text="8h 30m"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/tv_arr_date_card" />


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>